# docs/server/openapi.yaml
@@ -60,7 +60,7 @@ paths:
                 $ref: "#/components/schemas/Provider"
   /providers/:providerId/proof-sets:
     get:
-      summary: Get Proof Sets for a Provider
+      summary: Get Data Sets for a Provider
       parameters:
         - name: providerId
           in: path
@@ -91,7 +91,7 @@ paths:
                   data:
                     type: array
                     items:
-                      $ref: "#/components/schemas/ProofSet"
+                      $ref: "#/components/schemas/DataSet"
                   metadata:
                     $ref: "#/components/schemas/Metadata"
   /providers/:providerId/activities:
@@ -123,7 +123,7 @@ paths:
 
   /proofsets:
     get:
-      summary: Get list of all Proof Sets
+      summary: Get list of all Data Sets
       description: Retrieve a list of the top 5 proof sets, sorted by a specified metric such as number of proofs submitted or data size.
       parameters:
         - name: sortBy
@@ -165,7 +165,7 @@ paths:
                   data:
                     type: array
                     items:
-                      $ref: "#/components/schemas/ProofSet"
+                      $ref: "#/components/schemas/DataSet"
                   metadata:
                     $ref: "#/components/schemas/Metadata"
         "400":
@@ -180,7 +180,7 @@ paths:
                     description: Error message
   /proofsets/:proofSetId:
     get:
-      summary: Get ProofSet Details
+      summary: Get DataSet Details
       description: Retrieve detailed information about a specific proof set.
       parameters:
         - name: proofSetId
@@ -191,11 +191,11 @@ paths:
             type: string
       responses:
         "200":
-          description: ProofSet details
+          description: DataSet details
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/ProofSet"
+                $ref: "#/components/schemas/DataSet"
         "400":
           description: Invalid query parameter
           content:
@@ -207,7 +207,7 @@ paths:
                     type: string
                     description: Error message
         "404":
-          description: ProofSet not found
+          description: DataSet not found
           content:
             application/json:
               schema:
@@ -218,7 +218,7 @@ paths:
                     description: Error message
   /proofsets/:proofSetId/txs:
     get:
-      summary: Get ProofSet Transactions
+      summary: Get DataSet Transactions
       description: Retrieve detailed information about proof set transaction.
       parameters:
         - name: proofSetId
@@ -260,7 +260,7 @@ paths:
             default: 10
       responses:
         "200":
-          description: ProofSet details
+          description: DataSet details
           content:
             application/json:
               schema:
@@ -274,7 +274,7 @@ paths:
                     $ref: "#/components/schemas/Metadata"
   /proofsets/:proofSetId/event-logs:
     get:
-      summary: Get ProofSet Event Logs
+      summary: Get DataSet Event Logs
       description: Retrieve detailed information about proof set event logs.
       parameters:
         - name: proofSetId
@@ -318,7 +318,7 @@ paths:
             default: 10
       responses:
         "200":
-          description: ProofSet details
+          description: DataSet details
           content:
             application/json:
               schema:
@@ -332,7 +332,7 @@ paths:
                     $ref: "#/components/schemas/Metadata"
   /proofsets/:proofSetId/roots:
     get:
-      summary: Get ProofSet Roots
+      summary: Get DataSet Pieces
       description: Retrieve detailed information about proof set roots.
       parameters:
         - name: proofSetId
@@ -377,7 +377,7 @@ paths:
             default: 10
       responses:
         "200":
-          description: ProofSet details
+          description: DataSet details
           content:
             application/json:
               schema:
@@ -464,7 +464,7 @@ components:
         updatedAt:
           type: string
           format: date-time
-    ProofSet:
+    DataSet:
       type: object
       properties:
         id:
